--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,67 @@
+.jumbotron {
+	height: 44rem;
+    padding-top: 10rem;
+    text-align: center;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;	
+}
+
+.jumbotron p {
+	max-width: 51.3rem;
+	font-size: 1.5rem;
+	margin: auto;
+}
+
+.jumbotron-city {
+	background-image: url(../../assets/images/city.jpg);
+}
+
+.jumbotron-food {
+	background-image: url(../../assets/images/food.jpg);
+}
+
+.jumbotron-events {
+	background-image: url(../../assets/images/music.jpg);
+}
+
+.jumbotron-activity {
+	background-image: url(../../assets/images/activity.jpg);
+}
+
+.btn-large {
+	font-size: 1.3rem;
+	background-color: #399bd1;
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+	margin-top: 2.8rem;
+	width: 11.4rem;
+	padding: 1.3rem 0;
+	text-shadow: none;
+	border: 0;
+	transition: .5s box-shadow;
+}
+
+.btn-large:hover {
+	background-color: #399bd1;
+	box-shadow: 0 0 12px rgba(0, 0, 0, 0.9);
+}
+
+.btn-large:active {
+	box-shadow: 0 0 0 rgba(0, 0, 0, 0.5);
+}
+
+.button-wrapper {
+  position: relative;
+  top: -16rem;
+  width: 100%;
+}
+
+.slick-slide {
+  outline: none;
+}
+
 .img-div {
 	display: inline-block;
 	position: relative;
@@ -21,9 +85,9 @@ img {
 	cursor: pointer;
 }
 
-#maps {
+/*#maps {
 	position: fixed;
-	right: 3.25rem;
+	right: 3.25rem;*/
 }
 
 @media and (max-width: 1024px) {
