weather display in map header, results images fixed height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,15 +65,15 @@
 .img-div {
 	display: inline-block;
 	position: relative;
-	height: 270px;
+	height: 166px;
 	overflow: hidden;
 }
 
 img {
 	position: absolute;
-	left: 0;
-	right: 0;
-	margin: 0 auto;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .card-text {
@@ -85,19 +85,25 @@ img {
 	cursor: pointer;
 }
 
-/*#maps {
-	position: fixed;
-	right: 3.25rem;*/
+#map-city {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
+/*#maps {
+	position: sticky;
+	top: 2rem;
+}*/
+
 @media and (max-width: 1024px) {
-	#maps {
+/*	#maps {
 		right: 1.5rem;
-	}
+	}*/
 }
 
 @media and (max-width: 425px) {
-	#maps {
+/*	#maps {
 		position: initial;
-	}
+	}*/
 }
