map display sticky

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,19 +95,14 @@ img {
 	align-items: center;
 }
 
-/*#maps {
+#maps {
 	position: sticky;
-	top: 2rem;
-}*/
-
-@media and (max-width: 1024px) {
-/*	#maps {
-		right: 1.5rem;
-	}*/
+	top: 4rem;
+	align-self: flex-start;
 }
 
-@media and (max-width: 425px) {
-/*	#maps {
-		position: initial;
-	}*/
+@media and (max-width: 1024px) {
+	#maps {
+		position: static;
+	}
 }
