--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,10 @@ h1 {
 	padding-top: 2rem;
 }
 
+.team-member {
+	margin-bottom: 2rem;
+}
+
 h4 {
 	margin-top: 1rem;
 }
@@ -148,6 +152,13 @@ h4 {
 
 .choice {
 	cursor: pointer;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+
+.map-card {
+	margin-top: 1.5rem;
+	margin-bottom: 1rem;
 }
 
 #map-city {
