I WANT MY MAP BACK

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,10 +139,6 @@ label {
 	color: #fff;
 }
 
-/*#results {
-	background: linear-gradient(45deg, #f067b4 -30%, #81ffef 115%);
-}*/
-
 .card:hover {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -194,8 +190,16 @@ label {
   width: 100%;
 }
 
+#save {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 #saveModal .modal-body h5, #saveModal .modal-body p {
 	color: #fff;
+}
+
+#saveModal .modal-body h5 {
+	font-weight: bold;
 }
 
 /* Footer */
